# lliurex-up

./: pyproject.toml  setup.py
debian/: changelog  control  copyright  lliurex-up-cli.install  lliurex-up-cli.pkexec  lliurex-up-core.dirs  lliurex-up-core.install  lliurex-up-indicator.install  lliurex-up-pool-tools.install  lliurex-up.dirs  lliurex-up.install  lliurex-up.pkexec  lliurex-up.pofiles  lliurex-up.postinst  lliurex-up.prerm  lliurex-up.zero  python3-lliurexup.install  rules
lliurex-po/: generate_po.sh
lliurex-po/lliurex-up/: ca@valencia.po  ca_ES@valencia.po  es.po  es_ES.po  lliurex-up.pot
lliurex-up-auto-upgrade.install/usr/sbin/: lliurex-up-auto  lliurex-up-auto-upgrade
lliurex-up-cli/: __init__.py  lliurex-upgrade
lliurex-up-cli.install/: lliurex-upgrade
lliurex-up-cli/etc/bash_completion.d/: lliurex-upgrade
lliurex-up-cli/usr/sbin/: lliurex-upgrade
lliurex-up-core/etc/logrotate.d/: lliurex-up
lliurex-up-core/usr/lib/lliurex-up/: update-initramfs-alternative
lliurex-up-core/usr/sbin/: lliurex-up-auto  lliurex-upgrade-auto
lliurex-up-core/usr/share/applications/: lliurex-up.desktop
lliurex-up-core/usr/share/lliurex-up/: lliurex-pinning.cfg
lliurex-up-indicator/etc/xdg/autostart/: lliurex-up-indicator.desktop
lliurex-up.zmds/: lliurex-up.app  lliurex-up.zmd
lliurex-up/usr/sbin/: lliurex-up
llx-resources/lliurex-up/desktops/: lliurex-up.desktop
python-lliurex-up/lliurex/lliurexup/: __init__.py
python3-lliurex-up/: __init__.py
python3-lliurex-up/lliurex/lliurexup/: __init__.py
rsrc/: lliurex-up_baksvg
(+65 files in other folders)
