[build-system]
requires = ["setuptools","setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "lliurexup"
version = "0.1"
description = "lliurex-up library"
authors = [
	{ name = "Raul Rodrigo Segura", email="raurodse@gmail.com" },
	{ name = "LliureX Team"}
]
license = {text="GPL-3"}
urls = {repository="https://github.com/lliurex/lliurex-up"}

[tool.setuptools]
packages=["lliurexup","lliurexupcli"]

[tool.setuptools.package-dir]
lliurexup = "python3-lliurex-up"
lliurexupcli = "lliurex-up-cli"

[tool.setuptools.exclude-package-data]
lliurexupcli = ["lliurex-upgrade"]

[tool.setuptools.data-files]
"sbin" = ["lliurex-up-cli/lliurex-upgrade"]
